set up apikey and initiliaze it in Contants.java file

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+apikey = "1ed3176bf09458eb2c0fbfc97f025ab8"
+
