--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField "String", "API_KEY", apikey
+    }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
