refubished git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
 *.iml
 .gradle
 /local.properties
-/gradle.properties
+gradle.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/gradle/wrapper
+/.idea
+gradlew
+gradlew.bat
+settings.gradle
 .DS_Store
 /build
 /captures
