--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,44 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
+                <data
+                    android:host="www.google.com"
+                    android:pathPrefix="/Ngomaapp"
+                    android:scheme="http" />
+                <data
+                    android:host="ngomaapp"
+                    android:scheme="blueman" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activities.UserSettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/settings"
+            android:parentActivityName=".Activities.MusicListActivity"/>
         <activity
             android:name=".Activities.MusicListActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_music_list"
-            android:theme="@style/FullscreenTheme" />
-        <activity android:name=".Activities.MusicPreferenceActivity" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/FullscreenTheme">
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <data
+                    android:host="www.google.com"
+                    android:pathPrefix="/ngomaapp"
+                    android:scheme="http" />
+                <data
+                    android:host="ngomaapp"
+                    android:scheme="blueman" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.MusicPreferenceActivity" />
     </application>
 
 </manifest>
