--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".Activities.RegisterActivity"></activity>
+        <activity
+            android:name=".Activities.LoginActivity"
+            android:parentActivityName=".Activities.MusicListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <data
@@ -30,9 +35,9 @@
         </activity>
         <activity
             android:name=".Activities.UserSettingsActivity"
-            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/settings"
-            android:parentActivityName=".Activities.MusicListActivity"/>
+            android:parentActivityName=".Activities.MusicListActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activities.MusicListActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -40,6 +45,7 @@
             android:theme="@style/FullscreenTheme">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
